diesel_compile_tests/tests/ui/belongs_to_missing_foreign_key_column.stderr
error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:12:10
   |
12 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:12:10
   |
12 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:19:10
   |
19 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:19:10
   |
19 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:26:10
   |
26 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:26:10
   |
26 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0412]: cannot find type `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:34:10
   |
34 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error[E0425]: cannot find value `bar_id` in module `foo`
  --> $DIR/belongs_to_missing_foreign_key_column.rs:34:10
   |
34 | #[derive(Associations)]
   |          ^^^^^^^^^^^^ not found in `foo`

error: aborting due to 8 previous errors

Some errors occurred: E0412, E0425.
For more information about an error, try `rustc --explain E0412`.
